--- a/index.html
+++ b/index.html
@@ -113,7 +113,45 @@
       <input id="location-input" type="text" placeholder="Enter any Bangalore address, locality, street, or pincode" />
       <select id="cuisine-select">
         <option value="">Any cuisine</option>
-        <!-- cuisines... -->
+        <option>American</option>
+        <option>Asian</option>
+        <option>Bakery</option>
+        <option>Bar</option>
+        <option>BBQ</option>
+        <option>Breakfast</option>
+        <option>Brazilian</option>
+        <option>British</option>
+        <option>Buffets</option>
+        <option>Café</option>
+        <option>Caribbean</option>
+        <option>Chinese</option>
+        <option>Coffee</option>
+        <option>Comfort Food</option>
+        <option>Desserts</option>
+        <option>Dim Sum</option>
+        <option>European</option>
+        <option>Fast Food</option>
+        <option>French</option>
+        <option>German</option>
+        <option>Greek</option>
+        <option>Indian</option>
+        <option>Italian</option>
+        <option>Japanese</option>
+        <option>Korean</option>
+        <option>Latin American</option>
+        <option>Malaysian</option>
+        <option>Mediterranean</option>
+        <option>Mexican</option>
+        <option>Middle Eastern</option>
+        <option>Pizza</option>
+        <option>Seafood</option>
+        <option>Spanish</option>
+        <option>Steakhouse</option>
+        <option>Sushi</option>
+        <option>Tapas</option>
+        <option>Thai</option>
+        <option>Vegetarian</option>
+        <option>Vietnamese</option>
       </select>
       <button id="search-btn">Search</button>
       <span id="status" class="status"></span>
